MODQM-2 marc-json <-> ui-compatible-marc-json converter * Minor fixes